--- a/Unsupervised_Learning/Aglometric_Clustering.ipynb
+++ b/Unsupervised_Learning/Aglometric_Clustering.ipynb
@@ -17087,7 +17087,7 @@
     "   - `sklearn.cluster` - provides AgglomerativeClustering \n",
     "\n",
     "``Q16. What is the difference between Agglomerative clustering and Divisive Clustering?``\n",
-    "- |  Agglomerative|  Divisive     | \n",
+    " |  Agglomerative|  Divisive     | \n",
     "  |---------------|---------------|\n",
     "  |It is a bottom-up approach | It is a top-down approach | \n",
     "  |Iteratively merge the most similar clusters  | Recursively split clusters based on dissimilarity  | \n",
