--- a/Unsupervised_Learning/Aglometric_Clustering.ipynb
+++ b/Unsupervised_Learning/Aglometric_Clustering.ipynb
@@ -149,8 +149,8 @@
    "outputs": [],
    "source": [
     "#all credential for sql conncetion\n",
-    "user = 'Anshuman' \n",
-    "pw = 'Anshu@1004'\n",
+    "user = 'root' \n",
+    "pw = 'root'\n",
     "db = 'Airline_Traffic'\n",
     "\n",
     "#Convert special charater \n",
