--- a/Unsupervised_Learning/K_Means_and_DBscan/K_Means_and_DBscan.ipynb
+++ b/Unsupervised_Learning/K_Means_and_DBscan/K_Means_and_DBscan.ipynb
@@ -127,9 +127,9 @@
    "outputs": [],
    "source": [
     "#all credential for sql conncetion\n",
-    "user = 'Anshuman' \n",
-    "pw = 'Anshu@1004'\n",
-    "db = 'Airline_Traffic'\n",
+    "user = 'root'  #use your user id and password \n",
+    "pw = 'root'\n",
+    "db = 'Airline_Traffic'  #make sure you have database name Airline_Traffic\n",
     "\n",
     "#Convert special charater \n",
     "pw = quote_plus(pw)\n",
